tests/parser/valid/09_binary_precedence.src
fn test() {
    int x = 1 + 2 * 3;
    int y = 10 - 5 - 2;
}
