tests/parser/invalid/10_double_operator.src
fn test() {
    int x = 1 * * 2;
}
